--- a/index.html
+++ b/index.html
@@ -180,9 +180,20 @@
         .menu-section.active {
             display: block;
         }
-#repairLabel, #repairButtons {
-    display: none;
-}
+        #repairLabel, #repairButtons {
+            display: none;
+        }
+        .irradiations .irradiation-group {
+            margin-bottom: 20px;
+        }
+        .irradiations .irradiation-group p {
+            color: red;
+            font-weight: bold;
+            background-color: #f0f0f0;
+            padding: 5px;
+            margin: 0;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -203,12 +214,17 @@
         <div class="label">メニューをお選びください</div>
 <p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目1</p>
         <div class="menu-sections">
-            <button type="button" onclick="showMenu('male')">フェイシャルメニュー</button>
-            <button type="button" onclick="showMenu('female')">シェービングコース</button>
-            <button type="button" onclick="showMenu('whitening')">マッサージコース</button>
+            <button type="button" onclick="showMenu('facial')">フェイシャルメニュー</button>
+            <button type="button" onclick="showMenu('body')">ボディーメニュー</button>
+            <button type="button" onclick="showMenu('bustup')">バストアップメニュー</button>
+            <button type="button" onclick="showMenu('hairremoval')">脱毛メニュー</button>
+            <button type="button" onclick="showMenu('bridal')">ブライダルメニュー</button>
+            <button type="button" onclick="showMenu('eyebrows')">眉毛メニュー</button>
+            <button type="button" onclick="showMenu('selfwhitening')">セルフホワイトニング</button>
+            <button type="button" onclick="showMenu('Mugwortsteamed')">よもぎ蒸し・オイルリンパ</button>
         </div>
 
-        <div id="male" class="menu-section">
+        <div id="facial" class="menu-section">
 <p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目2</p>
             <div class="symptoms">
                 <button type="button" onclick="selectSymptom(this)">小顔輪郭矯正</button>
@@ -220,16 +236,23 @@
         </div>
 
 <div id="irradiations1" class="irradiations" style="display: none;">
-<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目3</p>
+    <div style="background-color: #f0f0f0; padding: 1px; width: 100%; box-sizing: border-box;">
+        <p style="color: red; font-weight: bold; padding-left: 4px; display: inline-block;">◆小顔輪郭矯正◆<br>コースをお選びください</p>
+    </div>
+    <div class="symptoms">
     <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正リフトアップコース</button>
     <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正エラ張りコース</button>
     <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正脂肪分解ECSコース</button>
     <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正肩こりスッキリコース</button>
     <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">小顔矯正顔筋リフトアップコース</button>
 </div>
+        </div>
 
 <div id="irradiations2" class="irradiations" style="display: none;">
-<p style="color: red; font-weight: bold; background-color: #f0f0f0; padding: 5px;">選択項目3</p>
+    <div style="background-color: #f0f0f0; padding: 1px; width: 100%; box-sizing: border-box;">
+        <p style="color: red; font-weight: bold; padding-left: 4px; display: inline-block;">◆ピーリングメニュー◆<br>コースをお選びください</p>
+    </div>
+    <div class="symptoms">
     <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
     <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
     <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
@@ -242,62 +265,70 @@
     <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
     <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
     <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+</div>
 </div>
 
 <div id="irradiations3" class="irradiations" style="display: none;">
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+    <div style="background-color: #f0f0f0; padding: 1px; width: 100%; box-sizing: border-box;">
+        <p style="color: red; font-weight: bold; padding-left: 4px; display: inline-block;">◆毛穴ハイドラメニュー◆<br>コースをお選びください</p>
+    </div>
+    <div class="symptoms">
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴洗浄コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴黒ずみピーリングコース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴引き締め美容液導入コース</button>
+</div>
 </div>
 
 <div id="irradiations4" class="irradiations" style="display: none;">
-            <label>◆シェービングコース◆</label>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+    <div style="background-color: #f0f0f0; padding: 1px; width: 100%; box-sizing: border-box;">
+        <p style="color: red; font-weight: bold; padding-left: 4px; display: inline-block;">◆肌質改善光フォトメニュー◆<br>コースをお選びください</p>
+    </div>
+    <div class="symptoms">
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">シミ部分コース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">シミ全体コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">シミW打ちコース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ部分コース</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ全体コース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビW打ちコース</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">赤ら顔部分コース</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">赤ら顔全体コース</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">赤ら顔W打ちコース</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">若返り全体コース</button>
+</div>
 </div>
 
 <div id="irradiations5" class="irradiations" style="display: none;">
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">眉カット</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ベーシックマッサージ(パック付き)</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">リラックスマッサージ(パック付き)</button>
+    <div style="background-color: #f0f0f0; padding: 1px; width: 100%; box-sizing: border-box;">
+        <p style="color: red; font-weight: bold; padding-left: 4px; display: inline-block;">◆脂肪分解・細胞リフトアップメニュー◆<br>コースをお選びください</p>
+    </div>
+    <div class="symptoms">
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">Y字・円盤ブロープ×ハンドECS</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">Y字ブロープ×ハンドECS</button>
+    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">円盤ブロープ×ハンドECS</button>
+    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">Y字ブロープ</button>
+    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">円盤ブロープ</button>
+    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">Y字・円盤ブロープ</button>
+    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">ハンドECS</button>
+</div>
 </div>
 
-        <div id="female" class="menu-section">
-            <label>◆シェービングコース◆</label>
-            <div class="symptoms">
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">究極の美白コース</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
-    <button type="button" id="sanirradiations" onclick="selectirradiations(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
-    <button type="button" id="yonirradiations" onclick="selectirradiations(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
-    <button type="button" id="goirradiations" onclick="selectirradiations(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
-    <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
-    <button type="button" id="repeatirradiations" onclick="selectirradiations(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
-            </div>
-        </div>
+<div id="body" class="menu-section">
+    <label style="color: red; font-weight: bold; background-color: #f0f0f0; width: 100%; display: block; padding: 40px; padding-left: 5px; box-sizing: border-box; margin-bottom: 20px;">◆ボディーメニュー◆<br>コースをお選びください</label>
+    <div class="symptoms">
+        <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">強炭酸・ガリレオピーリング</button>
+        <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">毛穴ケアつるんと美肌コース</button>
+        <button type="button" id="sanirradiations" onclick="selectBodyMenu(this)" data-price="15000">究極の美白コース</button>
+        <button type="button" id="yonirradiations" onclick="selectBodyMenu(this)" data-price="15000">ニキビ・ニキビ跡ケアコース</button>
+        <button type="button" id="goirradiations" onclick="selectBodyMenu(this)" data-price="15000">しみ・くすみ・たるみ・毛穴ケアコース</button>
+        <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">アンチエイジング幹細胞培養液導入コース</button>
+        <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">敏感肌・赤みピーリング(クリスティーナUNSTRESS)</button>
+        <button type="button" id="sanirradiations" onclick="selectBodyMenu(this)" data-price="15000">美白・透明感ピーリング(クリスティーナILLUSTRIOUS)</button>
+        <button type="button" id="yonirradiations" onclick="selectBodyMenu(this)" data-price="15000">皮脂抑制・毛穴デトックスピーリング(クリスティーナBIOPHYTO)</button>
+        <button type="button" id="goirradiations" onclick="selectBodyMenu(this)" data-price="15000">女優肌シルク肌ピーリング(クリスティーナSILK)</button>
+        <button type="button" id="firstirradiations" onclick="selectBodyMenu(this)" data-price="15000">本格的肌再生ピーリング(剥離少し・ハーブリプロ)</button>
+        <button type="button" id="repeatirradiations" onclick="selectBodyMenu(this)" data-price="15000">エクソソーム72時間肌再生ピーリング(剥離なし・エピダーマルスキン)</button>
+    </div>
+</div>
 
 
         <div id="whitening" class="menu-section">
@@ -373,7 +404,7 @@
 
         document.addEventListener('DOMContentLoaded', function() {
             liff.init({
-                liffId: '2006165697-mbD8aMBb'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -387,7 +418,7 @@
 function updateDisplayInfo() {
     const name = document.getElementById('name').value;
     const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご来店回数</strong></span>：${visitCount}` : '・来店回数が未選択です';
-    const irradiationsText = irradiationsCount ? `・<span style="color:red;"><strong>オプション</strong></span>：${irradiationsCount}` : '・オプション無し';
+    const irradiationsText = irradiationsCount ? `・<span style="color:red;"><strong>コース</strong></span>：${irradiationsCount}` : '・コースが未選択です';
     const totalAmountText = `・<span style="color:red;"><strong>合計金額</strong></span>：¥${menuPrice + optionsPrice}`;
     const selectedDateText = selectedFullDate ? `・<span style="color:red;"><strong>希望日時</strong></span>：${selectedFullDate}` : '・日時が未選択です'; // 日付が未選択の場合のメッセージを追加
 
@@ -426,6 +457,23 @@ document.querySelectorAll('.calendar td').forEach(cell => {
     });
 });
 
+    function selectBodyMenu(button) {
+        // 既に選択されている他のボタンの選択を解除する
+        const buttons = document.querySelectorAll('#body .symptoms button');
+        buttons.forEach(btn => {
+            btn.style.backgroundColor = '';  // ボタンの背景色をリセット
+            btn.style.color = '';  // テキストの色をリセット
+        });
+        
+        // クリックされたボタンを選択状態にする
+        button.style.backgroundColor = '#444';  // 選択時の色
+        button.style.color = 'white';  // テキストを白に変更
+        
+        // 選択されたコースを更新
+        irradiationsCount = button.innerText;
+        updateDisplayInfo();
+    }
+
 function selectSymptom(button) {
     // 全ボタンの選択をリセット
     const buttons = document.querySelectorAll('.symptoms button');
@@ -453,7 +501,7 @@ function selectSymptom(button) {
         document.getElementById('irradiations3').style.display = 'flex';
     } else if (symptomName === "肌質改善光フォトメニュー") {
         document.getElementById('irradiations4').style.display = 'flex';
-    } else if (symptomName === "小顔矯正顔筋リフトアップコース") {
+    } else if (symptomName === "脂肪分解・細胞リフトアップメニュー") {
         document.getElementById('irradiations5').style.display = 'flex';
     }
 
@@ -510,6 +558,12 @@ function updateTotalAmount() {
                 button.classList.add('active');
             }
         });
+
+    // irradiationsもリセット
+    const irradiationsSections = document.querySelectorAll('.irradiations');
+    irradiationsSections.forEach(section => {
+        section.style.display = 'none';
+    });
 
         // 選択されたメニューセクションを表示
         document.getElementById(menu).classList.add('active');
