--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
     gap: 0px; /* 隙間を0に設定 */
     margin-bottom: 20px;
 }
-
-.symptoms buttonv {
+.symptoms button {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -233,16 +232,24 @@
     width: 100%; /* ページの横幅に合わせる */
     margin: 0; /* ボタン間の余白をなくす */
 }
+.irradiations {
+    display: grid;
+    grid-template-columns: 1fr; /* 1列に設定 */
+    gap: 10px; /* ボタン間に隙間を追加 */
+    margin-bottom: 20px;
+}
+
 .irradiations button {
+    width: 100%; /* ボタンの幅を100%にしてページ幅に合わせる */
     padding: 10px; /* ボタン内の余白を調整 */
     border: 1px solid #ccc; /* 枠線の色を統一 */
     border-radius: 4px; /* ボタンの角を丸くする */
     background-color: #f7f7f7; /* 背景色を統一 */
     cursor: pointer; /* ポインタが変わる */
     text-align: center; /* 文字を中央揃えにする */
-    white-space: nowrap; /* テキストを折り返さない */
+    white-space: normal; /* テキストが折り返されるように設定 */
+    word-wrap: break-word; /* 長い単語があった場合に適切に折り返す */
     box-sizing: border-box; /* ボックスの大きさを調整 */
-    width: 100%; /* ボタンの幅を100%にして、他と揃える */
     margin: 0; /* ボタン間の余白をなくす */
 }
 
@@ -250,6 +257,7 @@
     background-color: #444; /* 選択されたボタンの背景色 */
     color: #fff; /* 選択されたボタンの文字色 */
 }
+
     </style>
 </head>
 <body>
