--- a/index.html
+++ b/index.html
@@ -221,15 +221,16 @@
     margin-bottom: 20px;
 }
 .symptoms button {
+    display: block; /* ボタンをブロック要素に変更 */
+    width: 100%; /* ページの横幅に合わせる */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #f7f7f7;
     cursor: pointer;
     text-align: center;
-    white-space: nowrap;
+    white-space: nowrap; /* テキストの折り返しを防ぐ */
     box-sizing: border-box;
-    width: 100%; /* ページの横幅に合わせる */
     margin: 0; /* ボタン間の余白をなくす */
 }
 .irradiations {
@@ -240,16 +241,16 @@
 }
 
 .irradiations button {
-    width: 100%; /* ボタンの幅を100%にしてページ幅に合わせる */
-    padding: 10px; /* ボタン内の余白を調整 */
-    border: 1px solid #ccc; /* 枠線の色を統一 */
-    border-radius: 4px; /* ボタンの角を丸くする */
-    background-color: #f7f7f7; /* 背景色を統一 */
-    cursor: pointer; /* ポインタが変わる */
-    text-align: center; /* 文字を中央揃えにする */
-    white-space: normal; /* テキストが折り返されるように設定 */
-    word-wrap: break-word; /* 長い単語があった場合に適切に折り返す */
-    box-sizing: border-box; /* ボックスの大きさを調整 */
+    display: block; /* ボタンをブロック要素に変更 */
+    width: 460px; /* ページの横幅に合わせる */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f7f7f7;
+    cursor: pointer;
+    text-align: center;
+    white-space: nowrap; /* テキストの折り返しを防ぐ */
+    box-sizing: border-box;
     margin: 0; /* ボタン間の余白をなくす */
 }
 
