--- a/index.html
+++ b/index.html
@@ -258,7 +258,14 @@
     background-color: #444; /* 選択されたボタンの背景色 */
     color: #fff; /* 選択されたボタンの文字色 */
 }
-
+/* スマホ用スタイル */
+@media (max-width: 768px) {
+    .irradiations button {
+        width: 100%; /* スマホではボタンをページ全体に広げる */
+        padding: 15px; /* ボタンのパディングを少し大きくする */
+        font-size: 16px; /* ボタン内のテキストを大きくして見やすくする */
+    }
+}
     </style>
 </head>
 <body>
