--- a/index.html
+++ b/index.html
@@ -241,31 +241,34 @@
 }
 
 .irradiations button {
-    display: block; /* ボタンをブロック要素に変更 */
-    width: 460px; /* ページの横幅に合わせる */
+    display: block; /* ブロック要素にする */
+    width: 100%; /* 親要素の幅に合わせる */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #f7f7f7;
     cursor: pointer;
     text-align: center;
-    white-space: nowrap; /* テキストの折り返しを防ぐ */
-    box-sizing: border-box;
-    margin: 0; /* ボタン間の余白をなくす */
+    white-space: nowrap;
+    box-sizing: border-box; /* パディングを含めてサイズを計算 */
+    margin: 0; /* 不要な余白をなくす */
 }
 
-.irradiations button.active {
-    background-color: #444; /* 選択されたボタンの背景色 */
-    color: #fff; /* 選択されたボタンの文字色 */
-}
 /* スマホ用スタイル */
 @media (max-width: 768px) {
     .irradiations button {
-        width: 100%; /* スマホではボタンをページ全体に広げる */
-        padding: 15px; /* ボタンのパディングを少し大きくする */
-        font-size: 16px; /* ボタン内のテキストを大きくして見やすくする */
+        padding: 15px; /* スマホではタッチエリアを広げる */
+        font-size: 16px; /* テキストを大きくする */
+        margin: 0;
+    }
+
+    /* 親要素の余白やパディングを調整 */
+    .irradiations {
+        padding-left: 0; /* 左右の余白をなくす */
+        padding-right: 0;
     }
 }
+
     </style>
 </head>
 <body>
