--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             gap: 10px;
             margin-bottom: 20px;
         }
-        .visit-buttons button, .symptoms button, .menu-sections button, .irradiations button, .manorwoman-buttons button  {
+        .visit-buttons button, .symptoms button, .menu-sections button, .manorwoman-buttons button  {
             flex: 1;
             padding: 10px;
             border: 1px solid #ccc;
