--- a/index.html
+++ b/index.html
@@ -237,36 +237,25 @@
     display: grid;
     grid-template-columns: 1fr; /* 1列に設定 */
     gap: 10px; /* ボタン間に隙間を追加 */
+    justify-content: center; /* 水平方向に中央に配置 */
+    align-items: center; /* 垂直方向に中央に配置 */
     margin-bottom: 20px;
+    max-width: none; /* max-width の制限を解除 */
 }
 
 .irradiations button {
-    display: block; /* ブロック要素にする */
-    width: 100%; /* 親要素の幅に合わせる */
+    display: block; /* ボタンをブロック要素に変更 */
+    width: 100%; /* ページの横幅に合わせる */
+    max-width: 400px; /* ボタンの最大幅を設定（任意で調整） */
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #f7f7f7;
     cursor: pointer;
     text-align: center;
-    white-space: nowrap;
-    box-sizing: border-box; /* パディングを含めてサイズを計算 */
-    margin: 0; /* 不要な余白をなくす */
-}
-
-/* スマホ用スタイル */
-@media (max-width: 768px) {
-    .irradiations button {
-        padding: 15px; /* スマホではタッチエリアを広げる */
-        font-size: 16px; /* テキストを大きくする */
-        margin: 0;
-    }
-
-    /* 親要素の余白やパディングを調整 */
-    .irradiations {
-        padding-left: 0; /* 左右の余白をなくす */
-        padding-right: 0;
-    }
+    white-space: nowrap; /* テキストの折り返しを防ぐ */
+    box-sizing: content-box; /* ボタンの幅をコンテンツに基づいて計算 */
+    margin: 0 auto; /* ボタンを中央に配置 */
 }
 
     </style>
